--- a/photo.html
+++ b/photo.html
@@ -20,7 +20,7 @@
 
 
     <main>
-        <h2></h2>
+        <h2>Наші поїздки</h2>
         <div class="gallery">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQiHl7D22wVQsBQaDUG9_tpTuMmLYMURhcR_A&s">
             <img src="https://yeremenko.ua/catalog/tour/vsya-amerika-2/vsya-amerika-2_127.jpg">
